--- a/style.css
+++ b/style.css
@@ -216,6 +216,10 @@
     font-weight: bold;
     color: #000;
   }
+
+  .product-item:hover {
+    scale: 1.1;
+  }
   
   /* Buat Footer */
   #contact {
